# sr2silo

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  Cargo.toml  Dockerfile  Makefile  README.md  SCHEMA_INFRASTRUCTURE.md  docker-compose.env  docker-compose.env.example  docker-compose.yml  environment.yml  get_seqs.py  index.html  mkdocs.yml  nuc_insertions.txt  objects.inv  pyproject.toml  requirements.txt  test_schema.py
.github/: copilot.yml  dependabot.yml  docker-build-test.env  pull_request_template.md
.github/workflows/: branch-protection.yml  conda_release.yml  docker-build-test.yml  docs.yml  poetry-conda.yml  publish.yml  test.yml  update_bioconda.yml
add_offset/: Cargo.toml
add_offset/src/: main.rs
api/loculus/: index.html
api/process/: index.html
api/schema/: index.html
api/silo/: index.html
api/vpipe/: index.html
blastX/: aa_sam_to_geneJson.py  bam_to_fasta.py  run_blastX.sh
blastX/ref/: sequences_assembley.fasta
conda-recipe/: build_local.sh  meta.yaml
contributing/: index.html
contributing/branching-strategy/: index.html
deployments/: README.md  secrets.py  submit-daily.sbatch  submit-historical.sbatch
deployments/_templates/: config.yaml
deployments/covid/: config.yaml
deployments/rsva/: config.yaml
deployments/rsvb/: config.yaml
deployments/secrets/: .gitignore
docs/: contributing.md  environment-variables.md  environment_variables.md  index.md
docs/api/: loculus.md  process.md  schema.md  silo.md  vpipe.md
docs/contributing/: branching-strategy.md
docs/usage/: configuration.md  deployment.md  environment_configuration.md  import_to_loculus.md  organisms.md  resource_requirements.md
environments/: dev-environment.yml  environment.yml  workflow-environment.yml
examples/: schema_usage.py  schema_usage_mock.py
examples/references/: README.md
logs/subsampling/: .gitignore
merge_sorted_chunks/: Cargo.toml
merge_sorted_chunks/src/: main.rs
notebooks/: Make_Test_Reads.ipynb  micro.bam.bai  out.sam  translate.txt
resources/loculus/: organism_conf.yml
resources/sars-cov-2/: README.md  aa_reference_genomes.fasta  txt.txt
resources/silo/: database_config.yaml
resources/vpipe/: timeline_columns.yml
scripts/: README.md  analyze_read_counts.py  check-code-quality.sh  database_config_minimal.yaml  extract_gbk_references.py  make_nextclade_input.py  paired_end_read_merger.py  reference_genomes.json  run.sh  run_vp_transformer.sh  submit.sh  submit_vp_transformer.sh  vp_config.json  vp_daemon.py  vp_deamon.py  vp_one_sample.py  vp_transfomer.py  vp_transformer.py  vp_transformer_config.json  vp_transfromer_config.json
scripts/daemon/: README.md  vp_config_daemon.json  vp_daemon.py
scripts/dgicev/: add_padding.py  read.py  readAndSort.py  read_outputsam.py
scripts/pathinder-client/: submit.py
search/: search_index.json
silo_input_transformer/: .gitignore  Cargo.toml  config.yaml
silo_input_transformer/src/: lib.rs  main.rs  util.rs
silo_input_transformer/src/config/: database_config.rs  input_transformer_config.rs  mod.rs  reference_genomes.rs
silo_input_transformer/src/process/: merge_final_result.rs  mod.rs  sort.rs  split_data_into_batches.rs
silo_input_transformer/src/process/merge_batches/: mod.rs  sorted_sequences_reader.rs
silo_input_transformer/src/test/: mod.rs  prepare_batch.rs  read_ndjson.rs
silo_input_transformer/src/types/: batch.rs  mod.rs  sequence.rs
sort_by_offset/: Cargo.toml
sort_by_offset/src/: main.rs
split_into_sorted_chunks/: Cargo.toml
test/: create_test_file.bash  test_file1.ndjson  test_file2.ndjson
tests/: conf_test.py  conftest.py  test_config.py  test_config_env_integration.py  test_config_env_vars.py  test_convert.py  test_database_config_validation.py  test_main.py  test_main_env_vars.py  test_metadata_schema.py  test_methods.py  test_process.py  test_process_from_vpipe.py  test_s3.py  test_scripts.py  test_scripts_dgicev.py  test_silo_input_transformer.py  test_silo_read_schema.py  test_translation.py
workflow/: .gitignore  CONFIGURATION.md  README.md  Snakefile  config.yaml  config_euler.yaml  generate_sbatch.sh  run_workflow.sh  sr2silo_daily.sbatch  sr2silo_workflow.sbatch  sr2silo_workflow_template.sbatch  submit_workflow.sh  vpipe-loculus-submit-daily.sbatch  vpipe-loculus-submit.sbatch
workflows/: Snakefile  config.yaml
ww_test/: README.md  database_config.yaml  docker-compose.yml  generate_silo_input.bash  preprocessing_config.yaml  run.bash
(+137 files in other folders)
