[tool.poetry]
name = "sr2silo"
version = "0.1.1"
description = "short-read to silo"
authors = ["Gordon Julian Koehn <gordon.koehn@dbsse.ethz.ch>"]
readme = "README.md"
packages = [{ include = "sr2silo", from = "src" }]

[tool.poetry.scripts]
sr2silo = "sr2silo.main:app"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.2"
boto3 = "^1.35.72"
moto = { extras = ["all", "ec2", "s3"], version = "^5.0.22" }
psutil = "^6.1.1"
tqdm = "^4.67.1"
click = "^8.1.8"
pydantic = "^2.10.6"
zstandard = "^0.23.0"
typer = "^0.15.1"
biopython = "^1.83"
pysam = "^0.23.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
ruff = "^0.0.253"
black = "^25.1.0"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.2.0"
pre-commit = "^3.1.0"
interrogate = "^1.5.0"
pyright = "^1.1.395"
mkdocs-material = "^9.1.6"
mkdocs-gen-files = "^0.4.0"
mkdocs-literate-nav = "^0.6.0"
setuptools = "^74.1.2"
mkdocstrings-python = "^1.13.0"

[tool.coverage.report]
fail_under = 75.0

[tool.interrogate]
ignore-init-method = false
ignore-init-module = false
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = false
ignore-module = false
fail-under = 95
exclude = ["setup.py", "docs", "build", "scripts/dgicev"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 2
quiet = false
whitelist-regex = []
color = true

[tool.pyright]
include = ["src"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs",
    "scripts",
]

[tool.ruff]
exclude = ["scripts"]

[tool.black]
exclude = '''
/(
    scripts
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
