[package]
name = "silo_input_transformer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
csv = "1.3.0"
needletail = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
tempdir = "0.3.7"
pyo3 = { version = "0.15", features = ["extension-module"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
